WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
295547
Rendering SDR thumbnails of HDR images is slow
https://bugs.webkit.org/show_bug.cgi?id=295547
Summary
Rendering SDR thumbnails of HDR images is slow
Matt Woodrow
Reported
2025-07-07 14:16:38 PDT
<
rdar://151331198
>
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2025-07-07 14:24:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47682
EWS
Comment 2
2025-07-07 20:11:27 PDT
Committed
297094@main
(c3eff2c3d6b5): <
https://commits.webkit.org/297094@main
> Reviewed commits have been landed. Closing PR #47682 and removing active labels.
Matt Woodrow
Comment 3
2025-07-08 14:15:56 PDT
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/47731
EWS
Comment 4
2025-07-08 17:24:45 PDT
Committed
297137@main
(c5a8599e6092): <
https://commits.webkit.org/297137@main
> Reviewed commits have been landed. Closing PR #47731 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug